skeleton with exercises

--- a/apps.html
+++ b/apps.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Bundle APP Store</title>
+    <link type="text/css" rel="stylesheet" href="style.css" media="screen" />
   </head>
   <body>
     <img src="images/banner.png"/>
@@ -18,5 +19,6 @@
      <p>
        Here comes the next bundle for march. This time its macware who publish a bundle. The so called macware Business Bundle contains 6 apps at a price of only $29.99 instead of $199.94. So you can save around 84%. There is n...
      </p>
+     <a href="index.html">Home</a>
   </body>
 </html>
