--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       <li>Sublime, by sublimetext.com/li>
       <li>Desktop Utility by Sweet Productions</li>
     </ul>
+    <p> To find how to locate our store, visit our <a href="directions.html"> directions </a> page.</p>
   </body>
 </html>
