--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <h1>Welcome to the App Bundle Store</h1>
     <p>
       This store brings you great app bundles week after week. We select the best power 
-      user apps from a broad range of suppliers and combine them into great deals. These are the highest quality apps form the best publishers, at great prices.  
+      user apps from a broad range of suppliers and combine them into great deals. These are the highest quality apps form the best publishers, at <em>great prices</em>.  
     </p>
     <p>
-      Whether you are interested in gaming or graphics design, software development or media production - we have the bundle for you. Each <a href="apps.html">app bundle</a> is designed to compliment the others, delivering you an exciting take on a scene.  
+      Whether you are interested in gaming or graphics design, software development or media production - we have the bundle for you. See the <a href="deals/deals.html"> deals page</a> for details. Each <a href="apps.html">app bundle</a> is designed to compliment the others, delivering you an exciting take on a scene.  
     </p>
        <h2>Favourites</h2>
     <ul>
