--- a/apps.html
+++ b/apps.html
@@ -1,3 +1,4 @@
+ <!DOCTYPE HTML>
 <html>
   <head>
     <title>Bundle APP Store</title>
@@ -9,7 +10,7 @@
      <p>
        Stacksocial just published its so called Free Ondesoft Mac Tool Bundle, which contains 5 apps from Ondesoft. The bundle worth $146 will be probably available only a couple of days so you’d better hurry up to get it.
      </p>
-
+     <img src="images/star40.gif"/>
      <p>
        <img src="images/ondesoft.jpg" alt="Black Brain Brew Elixir" />
      </p>
@@ -19,6 +20,7 @@
      <p>
        Here comes the next bundle for march. This time its macware who publish a bundle. The so called macware Business Bundle contains 6 apps at a price of only $29.99 instead of $199.94. So you can save around 84%. There is n...
      </p>
+     <img src="images/star45.gif"/><br>
      <a href="index.html">Home</a>
   </body>
 </html>
