--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <link type="text/css" rel="stylesheet" href="../store.css" media="screen" />
     <title>Bundle Store Directions</title>
   </head>
   <body>
@@ -13,7 +15,7 @@
     <p>Continue on Stucture Ave S - go 0.2 mi</p>
     <p>Turn right at SW Presentation Way - go 0.0 mi</p>
     <p>
-      <a href="../appstore.html">Back to the Store</a>
+      <a href="../index.html">Back to the Store</a>
     </p>
   </body>
 </html>
