--- a/deals/index.html
+++ b/deals/index.html
@@ -24,7 +24,7 @@
       The new bundle from StackCommerce contains quite a few apps which have never been in bundles before. The so called Summer Mac Essentials Bundle comes with 10 apps for only $19.99. That is 91% off the original price of $234!
     </p>
     <p>
-      <a href="../appstore.html">Back to the Store</a>
+      <a href="../index.html">Back to the Store</a>
     </p>
   </body>
 </html>
