--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-    <link type="text/css" rel="stylesheet" href="../store.css" media="screen" />
     <title>Bundle Store Directions</title>
+    <link type="text/css" rel="stylesheet" href="../store.css" />
   </head>
   <body>
     <h1>Directions</h1>
