Lab05 exercises complete, tabbed navigation included

--- a/about/index.html
+++ b/about/index.html
@@ -2,10 +2,17 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <link type="text/css" rel="stylesheet" href="../store.css" media="screen" />
     <title>Bundle Store Directions</title>
-    <link type="text/css" rel="stylesheet" href="../store.css" />
   </head>
   <body>
+   <div id="navigation">
+      <ol id="menu">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../deals/index.html">Deals</a></li>
+        <li class="current"><a href="index.html">About</a></li>
+      </ol>
+    </div>
     <h1>Directions</h1>
     <p>Take the 305 S exit to Webville - go 0.4 mi</p>
     <p>Continue on 305 - go 12 mi</p>
