--- a/deals/index.html
+++ b/deals/index.html
@@ -6,6 +6,13 @@
     <link type="text/css" rel="stylesheet" href="../store.css" />
   </head>
   <body>
+   <div id="navigation">
+      <ol id="menu">
+        <li><a href="../index.html">Home</a></li>
+        <li class="current"><a href="index.html">Deals</a></li>
+        <li><a href="../about/index.html">About</a></li>
+      </ol>
+    </div>
     <h1>More Deals</h1>
 
     <h2>Business Bundle</h2>
